--- a/src/homescreen.html
+++ b/src/homescreen.html
@@ -8,6 +8,8 @@ Tyler Yocom-->
     <title>Book-a-Seat</title>
 	<meta name = "keywords" content = "Book-A-Seat, Movie Theater seats, seat tickets">
 	<meta charset = "UTF-8">
+
+    <link rel = "stylesheet" type = "text/css" href = "homepage_style_sheet.css">
 </head>
 
 <style type = "text/css">
@@ -25,25 +27,77 @@ Tyler Yocom-->
         <table>
             <tr>
                 <td>Sign In</td>
-                <td>Home</td>
+                <td data-url = "homescreen.html">Home</td>
                 <td>Showings</td>
                 <td>About Us</td>
+                <td data-url = "signUp.html">Sign Up</td>
+            </tr>
+        </table>
+
+        <script type="text/javascript">
+		
+			document.querySelectorAll("td").forEach(function(cell) {
+				cell.addEventListener("click", function() {
+					url = this.getAttribute("data-url");
+					window.location.href = url;
+				});
+			});
+		
+		</script>
+
+    </div>
+
+    <div id = "content">
+        <table>
+            <tr>
+                <td id = "leftPanel" data-url = "signIn.html">
+                    <h2>Sign In for these deals!</h2>
+                    <hr>
+                    <p>Only applicable if signed in:</p>
+                    <ul>
+                        <li>Points</li>
+                        <li>Recommended Movies</li>
+                        <li>Free Movie Friday!</li>
+                    </ul>
+                    <hr>
+                    <h3>Sign up today!</h3>
+                </td>
+                <td id = "middlePanel">
+                    <h2>Showings</h2>
+                    <hr>
+
+                </td>
+                <td id = "rightPanel">
+                    <h2>About Us</h2>
+                    <hr>
+                </td>
             </tr>
         </table>
     </div>
 
-    <div id = "content">
-        <div id = "leftPanel">
-
-        </div>
-
-        <div id = "centerPanel">
-
-        </div>
-        
-        <div id = "rightPanel">
-
-        </div>
+    <div id = "footer">
+        <table>
+			<tr>
+				<td>
+					<p style = "text-align: left">Office:</p>
+					
+					<ul style = "text-align: left">
+						<li>Crown Point, Indiana</li>
+						<li>Phone: (219)-XXX-XXXX</li>
+						<li>Email: <a href="mailto:dagraber@iu.edu" title="Contact Me">Book-a-Seat@gmail.com
+    									<i class="fas fa-envelope"></i></a>
+						</li>
+						<li>Homepage: <a href = "https://github.com/dgraber00/System-Implementation">Link</a></li>
+					</ul>
+				</td>
+				<td>
+					<img id = "buttonsPic" src = "/Users/daltongraber/Documents/GitHub/System-Implementation/images/buttons.png">
+				</td>
+				<td>
+					<img id = "iunThumbnail" src = "/Users/daltongraber/Documents/GitHub/System-Implementation/images/IUN.png">
+				</td>
+			</tr>
+		</table>
     </div>
 </body>
 
