--- a/src/signIn.html
+++ b/src/signIn.html
@@ -12,14 +12,21 @@ Tyler Yocom-->
     </head>
 
     <body>
-        <div id = "content">
+        <div id = "heading">
             <h1>Sign in to Book-a-Seat!</h1>
+        </div>
 
-            <input type="email" id="email" name="email" placeholder="Email"><br><br>
-            <input type="password" id="password" name="password" title="Password" placeholder="Password"><br><br>
-            <a href="homescreen.html"><button type="submit">Submit</button></a>
+        <div id = "content">
+            <div id = "divImg">
+                <img id = "loginPhoto" src="/Users/daltongraber/Documents/GitHub/System-Implementation/images/movieTheaterLogInPhoto.png">
+            </div>
             
-            </form>
+            <div id = "inputs">
+                <input type="email" id="email" name="email" placeholder="Email"><br><br>
+                <input type="password" id="password" name="password" title="Password" placeholder="Password"><br><br>
+                <a href="homescreen.html"><button type="submit">Submit</button></a>
+            </div>
+            
         </div>
     </body>
 </html>
