--- a/src/showings.html
+++ b/src/showings.html
@@ -40,9 +40,9 @@ Tyler Yocom-->
                 trailerLink: "https://www.youtube.com/watch?v=xKJmEC5ieOk",
             },
             'movie5': {
-                title: "The Wizard of Oz",
-                description: "A young girl from Kansas is transported to the magical land of Oz where she must find her way home.",
-                trailerLink: "https://www.youtube.com/watch?v=H_3T4DGw10U",
+                title: "Titanic",
+                description: "Titanic is an epic romance and disaster film that chronicles the ill-fated voyage of the RMS Titanic, focusing on the love story between a young couple from different social classes as the ship tragically sinks.",
+                trailerLink: "https://www.youtube.com/watch?v=kVrqfYjkTdQ",
             },
             'movie6': {
                 title: "E.T. the Extra-Terrestrial",
@@ -50,9 +50,9 @@ Tyler Yocom-->
                 trailerLink: "https://www.youtube.com/watch?v=qYAETtIIClk",
             },
             'movie7': {
-                title: "The Wizard of Oz",
-                description: "A young girl from Kansas is transported to the magical land of Oz where she must find her way home.",
-                trailerLink: "https://www.youtube.com/watch?v=H_3T4DGw10U",
+                title: "Alone",
+                description: "Alone is a suspenseful thriller about a woman who, after being abducted and left for dead in the wilderness, must outwit her captor and survive in the harsh environment to escape.",
+                trailerLink: "https://www.youtube.com/watch?v=NoP2mJiCzWQ",
             },
         };
 
@@ -112,25 +112,25 @@ Tyler Yocom-->
 
             <table>
                 <tr>
-                    <td>Action</td>
+                    <td><a href="#action">Action</a></td>
                 </tr>
                 <tr>
-                    <td>Comedy</td>
+                    <td><a href="#comedy">Comedy</a></td>
                 </tr>
                 <tr>
-                    <td>Crime</td>
+                    <td><a href="#crime">Crime</a></td>
                 </tr>
                 <tr>
-                    <td>Horror</td>
+                    <td><a href="#horror">Horror</a></td>
                 </tr>
                 <tr>
-                    <td>Romance</td>
+                    <td><a href="#romance">Romance</a></td>
                 </tr>
                 <tr>
-                    <td>Sci-Fi</td>
+                    <td><a href="#sci-fi">Sci-Fi</a></td>
                 </tr>
                 <tr>
-                    <td>Thriller</td>
+                    <td><a href="#thriller">Thriller</a></td>
                 </tr>
             </table>
         </div>
@@ -138,7 +138,7 @@ Tyler Yocom-->
             <h2>Showings</h2>
 
             <table>
-                <tr>
+                <tr id="action">
                     <td>
                         <h3 style = "text-align: center;">Action</h3>
                         <hr>
@@ -151,7 +151,7 @@ Tyler Yocom-->
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td id="comedy">
                         <h3 style = "text-align: center;">Comedy</h3>
                         <hr>
                     </td>
@@ -162,7 +162,7 @@ Tyler Yocom-->
                         <h2>The Wizard of Oz</h2>
                     </td>
                 </tr>
-                <td>
+                <td id="crime">
                     <h3 style = "text-align: center;">Crime</h3>
                     <hr>
                 </td>
@@ -173,7 +173,7 @@ Tyler Yocom-->
                         <h2>Taken</h2>
                     </td>
                 </tr>
-                <td>
+                <td id="horror">
                     <h3 style = "text-align: center;">Horror</h3>
                     <hr>
                 </td>
@@ -185,7 +185,7 @@ Tyler Yocom-->
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td id="romance">
                         <h3 style = "text-align: center;">Romance</h3>
                         <hr>
                     </td>
@@ -197,7 +197,7 @@ Tyler Yocom-->
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td id="sci-fi">
                         <h3 style = "text-align: center;">Sci-Fi</h3>
                         <hr>
                     </td>
@@ -209,7 +209,7 @@ Tyler Yocom-->
                     </td>
                 </tr>
                 <tr>
-                    <td>
+                    <td id="thriller">
                         <h3 style = "text-align: center;">Thriller</h3>
                         <hr>
                     </td>
