--- a/src/signUp.html
+++ b/src/signUp.html
@@ -36,6 +36,7 @@ Tyler Yocom-->
                     <input type="submit" value="Submit">
                 </fieldset>
             </form>
+            <button onclick="window.location.href='homescreen.html'" style="margin: 5px;">Homepage</button>
         </div>
     </body>
 </html>
