--- a/src/homescreen.html
+++ b/src/homescreen.html
@@ -50,10 +50,10 @@ Tyler Yocom-->
     <div id = "content">
         <table>
             <tr>
-                <td id = "leftPanel" data-url = "signIn.html">
-                    <h2>Sign In for these deals!</h2>
+                <td id = "leftPanel" data-url = "signUp.html">
+                    <h2>Sign Up for these deals!</h2>
                     <hr>
-                    <p>Only applicable if signed in:</p>
+                    <p>Only applicable if you have created an account and are signed in:</p>
                     <ul>
                         <li>Points</li>
                         <li>Recommended Movies</li>
