--- a/src/reservePage.html
+++ b/src/reservePage.html
@@ -35,13 +35,13 @@ Tyler Yocom-->
                 <input type="text" id="email" name="email"><br><br>
 
                 <label for="name">Card Number:</label>
-                <input type="number" id="cardNumber" name="cardNumber"><br><br>
+                <input type="text" id="cardNumber" name="cardNumber"><br><br>
 
                 <label for="name">Expiration Date:</label>
                 <input type="month" id="expDate" name="expDate"><br><br>
 
                 <label for="name">Security Code:</label>
-                <input type="number" id="secCode" name="secCode"><br><br>
+                <input type="text" id="secCode" name="secCode"><br><br>
 
                 <input type="submit" value="Submit">
             </fieldset>
